fix display for browsers like Samsung Internet with artificial dark mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   margin: 0;
   background-color: #1d1f20;
-  color: #d3cfc9;
+  color: white;
 }
 
 header {
